# repository-template

./: .eslintrc.json  .gitignore  .markdownlint.json  .markdownlintignore  .npmignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements-gpu.txt  requirements.txt  tsconfig.json  zarf-config.yaml  zarf.yaml
.github/: CODEOWNERS  CONTRIBUTING.md  codeql.yaml  dependabot.yaml  pull_request_template.md
.github/workflows/: codeql.yml  commit-lint.yaml  commitlint.yaml  dockerfile-lint.yaml  helm-lint.yaml  license-checker.yaml  manifest-lint.yaml  node-lint.yaml  node-test.yaml  openssf.yaml  playwright-tests.yaml  publish-artifacts.yaml  python-lint.yaml  python-test.yaml  release-please-node.yaml  release-please-publish.yaml  release-please-python.yaml  release-please.yaml  scan-labels.yaml  template-sync.yaml  uds-lint.yaml  workflow-clean.yaml  zarf-lint.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  service.yaml
src/: main.svelte  main.ts
tests/: test_main.py
