[project]
name = "template-repository"
version = "0.7.2"

description = "Template repository for referencing and extending"
authors = [{ name = "LeapfrogAI Authors", email = "ai@defenseunicorns.com" }]
license = { file = "LICENSE" }
dependencies = []
requires-python = "== 3.11.6"
readme = "README.md"

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "black", "isort", "pre-commit", "ruff"]
gpu = []

[tool.pip-tools]
generate-hashes = true

[tool.ruff]
target-version = "py311"

exclude = [
    ".eggs",
    ".git",
    ".ruff_cache",
    "__pypackages__",
    "venv",
    ".venv",
    "__pycache__",
    ".pytest_cache",
]
